--- a/css/admin_news.css
+++ b/css/admin_news.css
@@ -2,6 +2,13 @@
     Created on : 26 février 2020
     Author     : Franck J.
 */
+.show-bg {
+    background-color: lightsalmon;
+    border-radius: 10px;
+    font-size: 1.1em;
+    color: crimson;
+}
+
 .info-message-bg {
     background-color: cornflowerblue;
     border-radius: 10px;
